Ensure specificity isn't too high

--- a/packages/block-editor/src/components/block-variation-transforms/style.scss
+++ b/packages/block-editor/src/components/block-variation-transforms/style.scss
@@ -1,4 +1,4 @@
-fieldset.block-editor-block-variation-transforms {
+.block-editor-block-variation-transforms:where(fieldset) {
 	// Reset `fieldset` browser defaults.
 	border: 0;
 	padding: 0;
